--- a/template/index-2.html
+++ b/template/index-2.html
@@ -628,7 +628,7 @@
                                                 </td>
                                                 <td>Caesar Vance</td>
                                                 <td>Herrod Chandler</td>
-                                                <td>09 April 2020</td>
+                                                <td>09 Abril 2020</td>
                                                 <td>09:30</td>
                                                 <td>
                                                     <div class="dropdown custom-dropdown mb-0">
@@ -832,7 +832,7 @@
 														<td><img src="images/profile/education/pic4.jpg" class="rounded-circle" width="35" alt=""></td>
 														<td>Caesar Vance</td>
 														<td><span class="badge badge-rounded badge-danger">Unpaid</span></td>
-														<td>09 April 2020</td>
+														<td>09 Abril 2020</td>
 														<td>$300</td>
 														<td>#57864</td>
 													</tr>
@@ -890,7 +890,7 @@
 														<td><img src="images/profile/education/pic10.jpg" class="rounded-circle" width="35" alt=""></td>
 														<td>Caesar Vance</td>
 														<td><span class="badge badge-rounded badge-danger">Unpaid</span></td>
-														<td>09 April 2020</td>
+														<td>09 Abril 2020</td>
 														<td>$300</td>
 														<td>#57864</td>
 													</tr>
@@ -948,7 +948,7 @@
 														<td><img src="images/profile/education/pic2.jpg" class="rounded-circle" width="35" alt=""></td>
 														<td>Caesar Vance</td>
 														<td><span class="badge badge-rounded badge-danger">Unpaid</span></td>
-														<td>09 April 2020</td>
+														<td>09 Abril 2020</td>
 														<td>$300</td>
 														<td>#57864</td>
 													</tr>
