--- a/template/ui-dropdown.html
+++ b/template/ui-dropdown.html
@@ -931,7 +931,7 @@
                                     <div class="col-xl-3">
                                         <div class="dropdown custom-dropdown">
                                             <button type="button" class="btn btn-sm btn-primary" data-toggle="dropdown">
-                                                <i class="ti-calendar m-r-5"></i> March 20, 2018 &nbsp; To &nbsp;April
+                                                <i class="ti-calendar m-r-5"></i> March 20, 2018 &nbsp; To &nbsp;Abril
                                                 20, 2018
                                                 <i class="fa fa-angle-down ml-3"></i>
                                             </button>
