--- a/template/widget-basic.html
+++ b/template/widget-basic.html
@@ -1349,7 +1349,7 @@
 									<div class="media mb-3">
 										<img class="mr-3 rounded-circle" alt="image" width="50" src="images/avatar/1.jpg">
 										<div class="media-body">
-											<h5>Jacob Tucker<small class="text-primary">April 29, 2018</small></h5>
+											<h5>Jacob Tucker<small class="text-primary">Abril 29, 2018</small></h5>
 											<p class="mb-2">I shared this on my fb wall a few months back, and I thought.</p>
 											<a href="javascript:void()" class="btn btn-primary btn-sm d-inline-block px-3">Reply</a>
 											<a href="javascript:void()" class="btn btn-outline-danger btn-sm d-inline-block px-3">Delete</a>
@@ -1358,7 +1358,7 @@
 									<div class="media mb-3">
 										<img class="mr-3 rounded-circle" alt="image" width="50" src="images/avatar/2.jpg">
 										<div class="media-body">
-											<h5>Noah Baldon <small class="text-primary">April 28, 2018</small></h5>
+											<h5>Noah Baldon <small class="text-primary">Abril 28, 2018</small></h5>
 											<p class="mb-2">I shared this on my fb wall a few months back, and I thought.</p>
 											<a href="javascript:void()" class="btn btn-primary btn-sm d-inline-block px-3">Reply</a>
 											<a href="javascript:void()" class="btn btn-outline-danger btn-sm d-inline-block px-3">Delete</a>
@@ -1687,7 +1687,7 @@
 							<div class="card-body">
 								<h4>Why is Early Education Essential?</h4>
 								<ul class="list-group mb-3 list-group-flush">
-									<li class="list-group-item px-0 border-top-0 d-flex justify-content-between"><span class="mb-0 text-muted">April 23</span>
+									<li class="list-group-item px-0 border-top-0 d-flex justify-content-between"><span class="mb-0 text-muted">Abril 23</span>
 										<a href="javascript:void(0);"><i class="la la-heart-o mr-1"></i><strong>230</strong></a></li>
 									<li class="list-group-item px-0 d-flex justify-content-between">
 										<span class="mb-0">Duration :</span><strong>12 Months</strong></li>
@@ -1706,7 +1706,7 @@
 							<div class="card-body">
 								<h4>The Shocking Revelation of Education.</h4>
 								<ul class="list-group mb-3 list-group-flush">
-									<li class="list-group-item px-0 border-top-0 d-flex justify-content-between"><span class="mb-0 text-muted">April 23</span>
+									<li class="list-group-item px-0 border-top-0 d-flex justify-content-between"><span class="mb-0 text-muted">Abril 23</span>
 										<a href="javascript:void(0);"><i class="la la-heart-o mr-1"></i><strong>230</strong></a></li>
 									<li class="list-group-item px-0 d-flex justify-content-between">
 										<span class="mb-0">Duration :</span><strong>12 Months</strong></li>
@@ -1725,7 +1725,7 @@
 							<div class="card-body">
 								<h4>Five Things Nobody Told You About</h4>
 								<ul class="list-group mb-3 list-group-flush">
-									<li class="list-group-item px-0 border-top-0 d-flex justify-content-between"><span class="mb-0 text-muted">April 23</span>
+									<li class="list-group-item px-0 border-top-0 d-flex justify-content-between"><span class="mb-0 text-muted">Abril 23</span>
 										<a href="javascript:void(0);"><i class="la la-heart-o mr-1"></i><strong>230</strong></a></li>
 									<li class="list-group-item px-0 d-flex justify-content-between">
 										<span class="mb-0">Duration :</span><strong>12 Months</strong></li>
@@ -1744,7 +1744,7 @@
 							<div class="card-body">
 								<h4>Learn Python – Interactive Python Tutorial</h4>
 								<ul class="list-group mb-3 list-group-flush">
-									<li class="list-group-item px-0 border-top-0 d-flex justify-content-between"><span class="mb-0 text-muted">April 23</span>
+									<li class="list-group-item px-0 border-top-0 d-flex justify-content-between"><span class="mb-0 text-muted">Abril 23</span>
 										<a href="javascript:void(0);"><i class="la la-heart-o mr-1"></i><strong>230</strong></a></li>
 									<li class="list-group-item px-0 d-flex justify-content-between">
 										<span class="mb-0">Duration :</span><strong>12 Months</strong></li>
